# uetctf

./: .gitignore  .gitmodules  .prettierignore  Dockerfile  Makefile  development.txt  docker-compose.yml  package.json  pyproject.toml  requirements.txt
CTFd/: __init__.py
CTFd/api/v1/: challenges.py
CTFd/plugins/backup/: README.md  __init__.py
CTFd/plugins/backup/backup/: __init__.py
CTFd/plugins/backup/static/: delete.js
CTFd/plugins/backup/templates/: backup_config.html
CTFd/plugins/ctfd-whale/: __init__.py  api.py  challenge_type.py  decorators.py  models.py
CTFd/plugins/ctfd-whale/assets/: docker.js  log.css  update.html  update.js  view.js
CTFd/plugins/ctfd-whale/templates/: whale_config.html  whale_docker.html  whale_log.html  whale_upload.html
CTFd/plugins/ctfd-whale/utils/: cache.py  checks.py  control.py  db.py  docker.py  setup.py
CTFd/plugins/ctfd-whale/utils/routers/: __init__.py  frp.py  trp.py
CTFd/themes/uetctf/assets/js/: challenges.js  notifications.js  scoreboard.js  setup.js
CTFd/themes/uetctf/assets/js/teams/: private.js  public.js
CTFd/themes/uetctf/assets/js/users/: private.js  public.js
CTFd/themes/uetctf/assets/js/utils/graphs/echarts/: categories.js  index.js  scoreboard.js  solve-percentage.js  userscore.js
CTFd/themes/uetctf/static/: manifest.json
CTFd/themes/uetctf/static/assets/: challenges.fa8e3828.js
CTFd/themes/uetctf/templates/: challenges.html
CTFd/utils/: __init__.py
conf-example/frp/: frps.ini
conf/frp/: frpc.ini
conf/nginx/: http.conf
