[tool.poetry]
name = "uetctf"
version = "3.6.1"
description = "UETCTF Cyber Range"
authors = ["Duong Nguyen"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.0.3"
werkzeug = "2.0.3"
flask-sqlalchemy = "2.5.1"
flask-caching = "2.0.2"
flask-migrate = "2.5.3"
flask-script = "2.0.6"
sqlalchemy = "1.4.48"
sqlalchemy-utils = "0.41.1"
passlib = "1.7.4"
bcrypt = "4.0.1"
requests = "2.28.1"
pymysql = {version = "1.0.2", extras = ["rsa"]}
gunicorn = "20.1.0"
dataset = "1.5.2"
cmarkgfm = "2022.10.27"
redis = "4.5.5"
gevent = "23.9.1"
python-dotenv = "0.13.0"
flask-restx = "1.1.0"
flask-marshmallow = "0.10.1"
marshmallow-sqlalchemy = "0.17.0"
boto3 = "1.13.9"
marshmallow = "2.20.2"
pydantic = "1.6.2"
wtforms = "2.3.1"
python-geoacumen-city = "2023.4.15"
maxminddb = "1.5.4"
tenacity = "6.2.0"
pybluemonday = "0.0.12"
freezegun = "1.2.2"
flask-babel = "2.0.0"


[tool.poetry.group.dev.dependencies]
pip-tools = "5.4.0"
pytest = "7.3.1"
pytest-randomly = "3.12.0"
coverage = "7.2.3"
psycopg2-binary = "2.9.6"
moto = "4.1.11"
bandit = "1.6.2"
flask-profiler = "1.8.1"
pytest-xdist = "3.2.1"
pytest-cov = "4.0.0"
sphinx-rtd-theme = "0.4.3"
flask-debugtoolbar = "0.11.0"
faker = "4.1.0"
pipdeptree = "2.2.0"
pytest-sugar = "0.9.7"
black = "22.3.0"
isort = "5.13.2"
ruff = "0.0.260"
dennis = "1.1.0"


[tool.poetry.group.plugins.dependencies]
docker = "4.1.0"
flask-apscheduler = "1.11.0"
flask-redis = "0.4.0"
schedule = "1.2.1"
pytz = "2020.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
